# dots-electricity-demand-service

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-image.yml
src/EDemandService/: EDemandService.py
src/ExampleCalculationService/: EConnection.py
test/: TestEDemand.py  TestTemplate.py
