[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "EDemandService"
version = "0.0.1"
authors = [
  { name="Gijs Verhoeven", email="g.verhoenven.1@tue.nl" },
]
description = "A DOTs calculation service publishing the active and reactive power demand of a building."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/EES-TUe/Dots-calculation-service-template"
Issues = "https://github.com/EES-TUe/Dots-calculation-service-template/issues"